--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@vercel/analytics": "^1.0.0",
     "next": "13.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-textarea-autosize": "^8.4.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.0",
