--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-textarea-autosize": "^8.4.1"
   },
   "devDependencies": {
