--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-lottie-player": "^1.5.4",
     "react-textarea-autosize": "^8.4.1"
   },
   "devDependencies": {
