--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-lottie-player": "^1.5.4",
-    "react-textarea-autosize": "^8.4.1"
+    "react-textarea-autosize": "^8.4.1",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.0",
