--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-lottie-player": "^1.5.4",
     "react-tailwindcss-datepicker": "^1.6.5",
     "react-textarea-autosize": "^8.4.1",
+    "tailwind-merge": "^2.2.1",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
