--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "zustand": "^4.3.8"
   },
   "devDependencies": {
+    "@types/gtag.js": "^0.0.20",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "autoprefixer": "^10.4.14",
