fix : react-player 제거 hls.js install

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "clsx": "^2.1.0",
     "embla-carousel-autoplay": "^8.0.0-rc22",
     "embla-carousel-react": "^8.0.0-rc22",
+    "hls.js": "^1.5.15",
     "lucide-react": "^0.331.0",
     "next": "13.2.4",
     "react": "18.2.0",
@@ -34,7 +35,6 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-lottie-player": "^1.5.4",
-    "react-player": "^2.16.0",
     "react-tailwindcss-datepicker": "^1.6.5",
     "react-textarea-autosize": "^8.4.1",
     "tailwind-merge": "^2.2.1",
