replace @toss/hangul with es-hangul

--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@sentry/nextjs": "^7.109.0",
     "@tanstack/react-query": "^4.29.14",
     "@tanstack/react-query-devtools": "^4.29.14",
-    "@toss/hangul": "^1.5.0",
     "@types/axios": "^0.14.0",
     "@types/node": "18.15.5",
     "@types/react": "18.0.28",
@@ -27,6 +26,7 @@
     "clsx": "^2.1.0",
     "embla-carousel-autoplay": "^8.0.0-rc22",
     "embla-carousel-react": "^8.0.0-rc22",
+    "es-hangul": "^2.1.0",
     "hls.js": "^1.5.15",
     "lucide-react": "^0.331.0",
     "next": "13.2.4",
