--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "clsx": "^2.1.0",
     "embla-carousel-autoplay": "^8.0.0-rc22",
     "embla-carousel-react": "^8.0.0-rc22",
+    "framer-motion": "^11.16.4",
     "hls.js": "^1.5.15",
     "lucide-react": "^0.331.0",
     "next": "13.2.4",
