chore: react/tailwind version up, 리액트 19에 맞게 의존성 버전 업

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "ddingdong-fe",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -11,25 +12,28 @@
   },
   "dependencies": {
     "@channel.io/channel-web-sdk-loader": "^2.0.0",
+    "@next/third-parties": "^15.5.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@sentry/nextjs": "^7.109.0",
-    "@tanstack/react-query": "^4.29.14",
-    "@tanstack/react-query-devtools": "^4.29.14",
+    "@sentry/nextjs": "^8.45.0",
+    "@tanstack/react-query": "^5.71.1",
+    "@tanstack/react-query-devtools": "^5.71.1",
     "@toss/hangul": "^1.5.0",
     "@types/axios": "^0.14.0",
     "@types/node": "18.15.5",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
+    "@types/react": "^19.1.11",
+    "@types/react-dom": "^19.1.7",
     "@vercel/analytics": "^1.0.2",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dayjs": "^1.11.13",
+    "ddingdong-design-system": "^0.1.0",
     "embla-carousel-autoplay": "^8.0.0-rc22",
     "embla-carousel-react": "^8.0.0-rc22",
     "event-source-polyfill": "^1.0.31",
@@ -37,14 +41,13 @@
     "hls.js": "^1.5.15",
     "js-confetti": "^0.12.0",
     "lottie-react": "^2.4.0",
-    "lucide-react": "^0.331.0",
-    "next": "13.2.4",
-    "react": "18.2.0",
+    "lucide-react": "^0.541.0",
+    "next": "^15.5.0",
+    "react": "^19.1.1",
     "react-cookie": "^4.1.1",
-    "react-dom": "18.2.0",
+    "react-dom": "^19.1.1",
     "react-hot-toast": "^2.4.1",
     "react-lottie-player": "^1.5.4",
-    "react-snowfall": "^2.2.0",
     "react-tailwindcss-datepicker": "^1.6.5",
     "react-textarea-autosize": "^8.4.1",
     "tailwind-merge": "^2.2.1",
@@ -54,20 +57,21 @@
     "zustand": "^4.3.8"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.12",
     "@types/event-source-polyfill": "^1.0.5",
     "@types/gtag.js": "^0.0.20",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.39.0",
-    "eslint-config-next": "^13.2.4",
+    "eslint-config-next": "^15.5.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "postcss": "^8.4.21",
     "prettier": "^2.8.7",
     "prettier-plugin-tailwindcss": "^0.2.7",
-    "tailwindcss": "^3.2.7",
+    "tailwindcss": "^4.1.12",
     "typescript": "^5.0.4"
   }
 }
