--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -1,7 +1,7 @@
-language: 'ko-KR'
+language: "ko-KR"
 early_access: false
 reviews:
-  profile: 'chill'
+  profile: "assertive"
   request_changes_workflow: false
   high_level_summary: true
   poem: false
@@ -9,6 +9,7 @@ reviews:
   collapse_walkthrough: false
   auto_review:
     enabled: true
-    drafts: false
+    drafts: true
+    base_branches: [".*"]
 chat:
   auto_reply: true
