--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,7 @@
     "es2021": true,
     "node": true
   },
-  "ignorePatterns": ["next.config.*", "postcss.config.*"],
+  "ignorePatterns": ["next.config.*", "postcss.config.*", "tailwind.config.ts"],
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended",
@@ -20,12 +20,16 @@
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module",
-    "project": ["tsconfig.json", "next.config.js", "tailwind.config.js"]
+    "project": ["tsconfig.json"]
   },
   "plugins": ["react", "@typescript-eslint", "prettier", "import"],
+    "settings": {
+    "import/resolver": {
+      "typescript": { "project": ["tsconfig.json"] },
+      "node": { "extensions": [".js", ".jsx", ".ts", ".tsx"] }
+    }
+  },
   "rules": {
-    "import/no-unresolved": "off",
-    "no-undef": "off",
     "no-redeclare": "off",
     "no-duplicate-imports": "error",
     "no-unused-vars": "off",
@@ -58,11 +62,6 @@
         "pathGroups": [
           {
             "pattern": "next/**",
-            "group": "external",
-            "position": "before"
-          },
-              {
-            "pattern": "next",
             "group": "external",
             "position": "before"
           },
