--- a/package.json
+++ b/package.json
@@ -72,5 +72,8 @@
     "prettier-plugin-tailwindcss": "^0.6.9",
     "tailwindcss": "^4.1.12",
     "typescript": "^5.7.2"
+  },
+   "engines": {
+    "node": ">=18.18 <23"
   }
 }
