--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
+    "dev:turbo": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -33,13 +34,14 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "dayjs": "^1.11.13",
-    "ddingdong-design-system": "^0.1.0",
+    "ddingdong-design-system": "^0.2.9",
     "embla-carousel-autoplay": "^8.0.0-rc22",
     "embla-carousel-react": "^8.0.0-rc22",
     "event-source-polyfill": "^1.0.31",
     "framer-motion": "^11.16.4",
     "hls.js": "^1.5.15",
     "js-confetti": "^0.12.0",
+    "ky": "^1.9.0",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.541.0",
     "next": "^15.5.0",
@@ -73,7 +75,7 @@
     "tailwindcss": "^4.1.12",
     "typescript": "^5.7.2"
   },
-   "engines": {
+  "engines": {
     "node": ">=18.18 <23"
   }
 }
