chore: eslint tailwind 패턴 일반화, 오타 수정

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,7 @@
     "es2021": true,
     "node": true
   },
-  "ignorePatterns": ["next.config.*", "postcss.config.*", "tailwind.config.js"],
+  "ignorePatterns": ["next.config.*", "postcss.config.*", "tailwind.config.*"],
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended",
