chore: tsconfig에 public 경로 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,7 @@
     "**/*.tsx",
     "next-env.d.ts",
     "next.config.js",
+    "public/**/*.js",
     "postcss.config.js",
     "tailwind.config.*",
     ".next/types/**/*.ts"
