--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@sentry/nextjs": "^8.45.0",
     "@tanstack/react-query": "^5.71.1",
     "@tanstack/react-query-devtools": "^5.71.1",
-    "@types/node": "18.15.5",
     "@types/react": "^19.1.11",
     "@types/react-dom": "^19.1.7",
     "@vercel/analytics": "^1.0.2",
@@ -61,6 +60,7 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/event-source-polyfill": "^1.0.5",
     "@types/gtag.js": "^0.0.20",
+    "@types/node": "^20.19.27",
     "@typescript-eslint/eslint-plugin": "^8.17.0",
     "@typescript-eslint/parser": "^8.17.0",
     "@vitejs/plugin-react": "^4.7.0",
