chore: 커밋 컨벤션에 맞게 타입 수정

--- a/.commitlintrc.json
+++ b/.commitlintrc.json
@@ -2,6 +2,36 @@
   "extends": ["@commitlint/config-conventional"],
   "parserPreset": {
     "parserOpts": {
+      "headerPattern": "^(?<type>[^:]+):\\s(?<subject>.+)$",
+      "headerCorrespondence": ["type", "subject"]
+    }
+  },
+  "rules": {
+    "type-enum": [
+      2,
+      "always",
+      [
+        "feat",
+        "fix",
+        "docs",
+        "style",
+        "refactor",
+        "test",
+        "chore",
+        "hotfix"
+      ]
+    ],
+    "type-empty": [2, "never"],
+    "subject-empty": [2, "never"],
+    "subject-full-stop": [2, "never", "."],
+    "type-case": [0]
+  }
+}
+
+{
+  "extends": ["@commitlint/config-conventional"],
+  "parserPreset": {
+    "parserOpts": {
       "headerPattern": "^(?<type>.+):\\s(?<subject>.+)$",
       "headerCorrespondence": ["type", "subject"]
     }
