--- a/.github/workflows/auto-assign-pr.yml
+++ b/.github/workflows/auto-assign-pr.yml
@@ -2,35 +2,15 @@ name: Auto Assign PR Author & Reviewers
 
 on:
   pull_request:
-    types: [opened, reopened]
+    types: [opened, reopened, ready_for_review]
 
 jobs:
-  assign:
+  auto-assign:
     runs-on: ubuntu-latest
     permissions:
       pull-requests: write
+      issues: write
+
     steps:
-      - name: Assign author and reviewers
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const author = context.payload.pull_request.user.login;
-
-            await github.rest.issues.addAssignees({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: context.issue.number,
-              assignees: [author],
-            });
-
-            const reviewers = ['keemsebin', 'JangYEhoon00', 'ujinsim'];
-            const filteredReviewers = reviewers.filter(r => r !== author);
-
-            if (filteredReviewers.length > 0) {
-              await github.rest.pulls.requestReviewers({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                pull_number: context.issue.number,
-                reviewers: filteredReviewers,
-              });
-            }
+      - name: Auto assign PR
+        uses: kentaro-m/auto-assign-action@v1.2.6
