refactor : 정규식 변경
커밋 양식에 맞는 단어만 들어올 수 있게 변경했습니다!

--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -1,54 +1,54 @@
 filters:
   - label: feat
     regexs:
-      - /feat/i
+      - /^feat\b/
     events: [issues, pull_request]
     targets: [title]
 
   - label: fix
     regexs:
-      - /fix/i
+      - /^fix\b/
     events: [issues, pull_request]
     targets: [title]
 
   - label: hotfix
     regexs:
-      - /hotfix/i
+      - /^hotfix\b/
     events: [issues, pull_request]
     targets: [title]
 
   - label: docs
     regexs:
-      - /docs/i
+      - /^docs\b/
     events: [issues, pull_request]
     targets: [title]
 
   - label: style
     regexs:
-      - /style/i
+      - /^style\b/
     events: [issues, pull_request]
     targets: [title]
 
   - label: refactor
     regexs:
-      - /refactor/i
+      - /^refactor\b/
     events: [issues, pull_request]
     targets: [title]
 
   - label: test
     regexs:
-      - /test/i
+      - /^test\b/
     events: [issues, pull_request]
     targets: [title]
 
   - label: chore
     regexs:
-      - /chore/i
+      - /^chore\b/
     events: [issues, pull_request]
     targets: [title]
 
   - label: infra
     regexs:
-      - /infra/i
+      - /^infra\b/
     events: [issues]
     targets: [title]
