fix : config 파일 경로 변경

--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           disable-bot: true
-          config-file-name: labeler-config.yml
+          config-file-name: .github/labeler-config.yml
 
   add_assignees:
     runs-on: ubuntu-latest
