fix : 참조 방식 통일

--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -33,5 +33,5 @@ jobs:
     steps:
       - uses: actions-ecosystem/action-add-assignees@v1
         with:
-          github_token: ${{ secrets.github_token }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           assignees: ${{ github.actor }}
