fix: 중복되는 액션 제거, 코드래빗 리뷰 반영

--- a/.github/labeler-config.yml
+++ b/.github/labeler-config.yml
@@ -13,7 +13,7 @@ filters:
 
   - label: hotfix
     regexs:
-      - /^\[HOTFIX\]\s/
+      - /^\[HOTFIX\]\s*/
     events: [issues, pull_request]
     targets: [title]
 
