fix: 참조 파일명 변경

--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -19,4 +19,4 @@ jobs:
         with:
           token: '${{ secrets.GITHUB_TOKEN }}'
           disable-bot: true
-          config-file-name: label-config.yml
+          config-file-name: labeler-config.yml
