--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "test": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "test:e2e": "npx playwright test",
+    "test:e2e:ui": "npx playwright test --ui"
   },
   "dependencies": {
     "@channel.io/channel-web-sdk-loader": "^2.0.0",
@@ -35,6 +37,7 @@
     "ky": "^1.9.0",
     "lottie-react": "^2.4.0",
     "next": "^15.5.7",
+    "playwright": "^1.58.2",
     "react": "^19.2.1",
     "react-cookie": "^7.2.2",
     "react-dom": "^19.2.1",
@@ -50,6 +53,7 @@
     "zustand": "^5.0.2"
   },
   "devDependencies": {
+    "@playwright/test": "^1.58.2",
     "@tailwindcss/postcss": "^4.1.12",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
