--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,12 @@
     "next/core-web-vitals",
     "prettier"
   ],
-  "overrides": [],
+  "overrides": [
+    {
+      "files": ["tests/**/*.{ts,tsx}"],
+      "extends": ["plugin:playwright/recommended"]
+    }
+  ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
