--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "eslint-config-next": "^15.5.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-playwright": "^2.5.1",
     "eslint-plugin-prettier": "^5.2.1",
     "happy-dom": "^15.11.7",
     "postcss": "^8.5.1",
