test: Playwright 설정 및 의존성 업데이트

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,7 @@
   ],
   "overrides": [
     {
-      "files": ["tests/**/*.{ts,tsx}"],
+      "files": ["e2e/**/*.{ts,tsx}"],
       "extends": ["plugin:playwright/recommended"]
     }
   ],
